# mycroft-json-messages

./: README.md  ack-track-info-request.json  audio-output-end.json  audio_output_start.json  awoken.json  clear-wifi-settings.json  complete_intent_failure.json  config_updated.json  deactivate-skill.json  decrease-volume.json  disable-ssh.json  disable_intent.json  duck-volume.json  enable-ssh.json  enable_intent.json  enclosure-mouth-viseme-list.json  enclosure-mouth-viseme_list.json  get-audio-backends-list.json  get-latest-skill-settings.json  get-skills-list.json  get-track-info.json  get-volume-response.json  get-volume.json  has-alarm.json  increase-volume.json  internet-connected.json  listen.json  loading-failed.json  loading_failed.json  messagebus-closed.json  messagebus-opened.json  messagebus-reconnecting.json  mic-mute.json  mic-unmute.json  msm-install-failed.json  msm-install-succeeded.json  msm-installed.json  msm-installing.json  msm-remove-failed.json  msm-remove-succeeded.json  (+48 more)
test/: load-json-messages.py
