[tool.poetry]
name = "mycroft-json-messages"
version = "0.1.0"
description = "This is preformated forms of all of the messages accepted on mycroft message-bus in JSON format"
authors = ["Andrew Morris <andy_morris22@yahoo.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
